--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
-title: Minimal theme
+title: <p align="center">Komal Mahawar</p>
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+description: 
+<p align="center">
+  <a href="pdf/resume.pdf">Resume</a> |
+  <a href="https://www.linkedin.com/in/komal-mahawar-28487573/">LinkedIn</a> |
+  <a href="https://github.com/KomalMahawar">GitHub</a>Minimal is a theme for GitHub Pages.
+
 theme: jekyll-theme-minimal
