Added link to profile photo

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: <p align="center">Komal Mahawar</p>
-logo: /assets/img/logo.png
+logo: /assets/img/IMG-20200707-WA0005.jpg
 description: 
 <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
