modified linkedin url

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: <p align="center">Komal Mahawar</p>
 logo: /assets/img/IMG-20200707-WA0005.jpg
 description: 
   <p align="center">
-  <a href="https://www.linkedin.com/in/komal-mahawar-28487573/">LinkedIn</a> |
-  <a href="https://github.com/KomalMahawar">GitHub</a>Minimal is a theme for GitHub Pages.
+    <a href="https://www.linkedin.com/in/komalmahawar/">LinkedIn</a> |
+    <a href="https://github.com/KomalMahawar/">GitHub</a>Minimal is a theme for GitHub Pages.
   </p>
 
 theme: jekyll-theme-minimal
