--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: <p align="center">Komal Mahawar</p>
 logo: /assets/img/IMG-20200707-WA0005.jpg
 description: 
-  <p align="center">
+  <html> <p align="center">
     <a href="https://www.linkedin.com/in/komalmahawar/">LinkedIn</a> |
     <a href="https://github.com/KomalMahawar/">GitHub</a>Minimal is a theme for GitHub Pages.
-  </p>
+  </p> </html>
 
 theme: jekyll-theme-minimal
