--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,17 @@
 title: <p align="center">Komal Mahawar</p>
 logo: /assets/img/IMG-20200707-WA0005.jpg
-description: 
-  <html> <p align="center">
-    <a href="https://www.linkedin.com/in/komalmahawar/">LinkedIn</a> |
-    <a href="https://github.com/KomalMahawar/">GitHub</a>Minimal is a theme for GitHub Pages.
-  </p> </html>
+description:
+  <p align="center">
+  <a href="pdf/resume.pdf">Resume</a> |
+  <a href="https://www.linkedin.com/in/sajan-kedia-b06a6821/">LinkedIn</a> |
+  <a href="https://github.com/sajankedia">GitHub</a>
+  
+  <br>   
+  I'm working on Data Science, Big Data, Spark, Machine learning & NLP related problems.
+  Also handing the Big Data from real-time Ad call data.
+  Worked with IBM Research at Big Data Analytics team.
+  Working in AdTech domain for 3 years.
+  <br>
+  </p>
 
 theme: jekyll-theme-minimal
