--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,14 @@ logo: /assets/img/IMG-20200707-WA0005.jpg
 description:
   <p align="center">
   <a href="https://github.com/KomalMahawar">GitHub</a>
+  <a href="https://www.linkedin.com/in/komalmahawar/">LinkedIn</a> |
+  
+  <br>   
+  I'm working as RPA developer and has 8+ years of industrial experience.
+  Worked with Infosys for banking clients like UBS and AMEX.
+  Worked with NTT Data for banking client Goldman Sachs.
+  Worked with EY GDS for banking client HSBC.
+  <br>
   </p>
 
 theme: jekyll-theme-minimal
