--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,9 @@ title: <p align="center">Komal Mahawar</p>
 logo: /assets/img/IMG-20200707-WA0005.jpg
 description:
   <p align="center">
-  <a href="https://github.com/KomalMahawar">GitHub</a>
+  <a href="https://github.com/KomalMahawar">GitHub</a> |
   <a href="https://www.linkedin.com/in/komalmahawar/">LinkedIn</a> |
+  <a href="pdf/resume.pdf">Resume</a> 
   
   <br>   
   I'm working as RPA developer and has 8+ years of industrial experience.
