--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ description:
   <br>   
   I'm working as RPA developer and has 8+ years of industrial experience.
   Worked with Infosys for banking clients like UBS and AMEX.
-  Worked with NTT Data for banking client Goldman Sachs.
-  Worked with EY GDS for banking client HSBC.
+  Worked with NTT Data for Goldman Sachs.
+  Worked with EY GDS for HSBC.
   <br>
   </p>
 
